fixes collapse overflow

--- a/src/indigo/less/panels.less
+++ b/src/indigo/less/panels.less
@@ -98,6 +98,9 @@
   box-shadow: none;
   .panel-collapse {
     overflow: hidden;
+    &.in{
+      overflow: visible; //children elements can overflow
+    }
   }
   &.panel-preview {
     position: relative;
